kubernetes/examples/echo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: echo-1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo1
  template:
    metadata:
      labels:
        app: echo1
    spec:
      containers:
        - name: echo-1-container
          image: hashicorp/http-echo
          args:
            - "-text=echo-one"
          ports:
            - containerPort: 5678
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: echo-2-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo2
  template:
    metadata:
      labels:
        app: echo2
    spec:
      containers:
        - name: echo-2-container
          image: hashicorp/http-echo
          args:
            - "-text=echo-two"
          ports:
            - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: echo-1-service
spec:
  ports:
    - name: http
      targetPort: 5678
      port: 80
  selector:
    app: echo1
---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: echo-2-service
spec:
  ports:
    - name: http
      targetPort: 5678
      port: 80
  selector:
    app: echo2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: echo1.localhost
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: echo-1-service
                port:
                  name: http
    - host: echo2.localhost
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: echo-2-service
                port:
                  name: http
