kubernetes/examples/nginx.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx-container
          image: nginx
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: nginx-pv-storage
              mountPath: "/usr/share/nginx/html"
      volumes:
        - name: nginx-pv-storage
          persistentVolumeClaim:
            claimName: nginx-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: nginx-service
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    app: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  name: http
